--- a/interface/index.html
+++ b/interface/index.html
@@ -1,7 +1,14 @@
 <html>
-  <head>
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
-  </head>
-  <body>
-  </body>
+
+<head>
+  <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+  <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+  <canvas id="main_surface">
+    An alternative text describing what your canvas displays.
+  </canvas>
+</body>
+
 </html>
