added toolbox with buttons to prototype

--- a/interface/index.html
+++ b/interface/index.html
@@ -2,13 +2,13 @@
 
 <head>
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
-  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
   <canvas id="main_surface">
     An alternative text describing what your canvas displays.
   </canvas>
+  <tool-box>tools</tool-box>
 </body>
 
 </html>
